# g_compensator

./: CMakeLists.txt  LICENSE.md  README.md  package.xml  setup.py
include/g_compensation/: g_compensator_class.h
launch/: g_compensator_example.launch
src/g_compensation/: calibrate.py  g_compensator.cpp  g_compensator.py
test/: generate_data.py  test_calibration.py
