<?xml version="1.0"?>
<package format="2">
  <name>g_compensation</name>
  <version>0.0.0</version>
  <description>Gravity compensation for FT-sensors.</description>

  <maintainer email="phg@ipa.fhg.de">Philipp Gorczak</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>python_orocos_kdl</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2_kdl</exec_depend>
  <exec_depend>tf2_py</exec_depend>

  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <build_depend>geometry_msgs</build_depend>
  <depend>rosparam_shortcuts</depend>
  <depend>kdl_conversions</depend>

  <export>
  </export>

</package>
